--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 streamlit
-langchain_groq
+langchain_groq 
 langchain_core
 langchain
 langchain_community
-langchain_text_splitters
+langchain_text_splitters 
+os
 re
 datetime
 tempfile
+dotenv
